Fri Nov  4 12:04:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Cache_Map_Manager_T.{h,cpp,inl}:
          Changed MAP to MAP_TYPE to resolve conflicts with VxWorks 6.1
          MAP define

Fri Nov  4 11:16:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.inl:
          For VxWorks 6.1 also include os_string.h to get swab

Fri Nov  4 10:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Capabilities.{h,cpp}:
          Changed MAP to CAPABILITIES_MAP. VxWorks 6.1 defines the cpu
          type MAP which results in a compile error

        * ace/os_include/sys/os_un.h:
          Only define the struct sockaddr_un with VxWorks versions older
          then 6.1

Fri Nov  4 10:33:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.1.h:
        * include/makeinclude/platform_vxworks6.1.GNU:
          New files for VxWorks 6.1. This is just a first draft version, a lot
          of porting work has to be done

        * ace/OS_NS_stdlib.cpp:
          Fixed variable not used warning with VxWorks 6.1

Fri Nov  4 10:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.h:
          Only define VX_FP_TASK when it is not defined yet

Fri Nov  4 08:50:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Global_Macros.h:
          Removed check for BCB3, that is ancient

Thu Nov  3 12:34:30 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* ace/Service_Config.h (ACE_DYNAMIC_SERVICE_DIRECTIVE): Added a
	  missing '\' at near the end of a macro.  Thanks to Lothar
 	  Werzinger for this fix.

Thu Nov  3 09:16:23 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Activation_Queue.h:
	* ace/Atomic_Op.h:
	* ace/Condition_Recursive_Thread_Mutex.h:
	* ace/DLL.h:
	* ace/DLL_Manager.h:
	* ace/Dev_Poll_Reactor.h:
	* ace/Framework_Component.h:
	* ace/Get_Opt.h:
	* ace/Mem_Map.h:
	* ace/Message_Queue.cpp:
	* ace/Message_Queue.h: